--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,17 +5,17 @@ services:
     build: .
     image: flask-grapql:latest
     restart: always
+    network_mode: host
     env_file:
       - .env
     depends_on:
       - postgres
-    ports:
-      - 5000:5000
 
   postgres:
     image: postgres:11
     container_name: postgres
     restart: always
+    network_mode: host
     env_file:
       - .env
     volumes:
